force-app/main/default/objects/Dashboard_Limits__c/Dashboard_Limits__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Setting used for applying the limits for total records displayed on Kanbanboard.</description>
    <label>Dashboard Limits</label>
</CustomObject>