force-app/main/default/objects/Dashboard_Limits__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <defaultValue>20</defaultValue>
    <description>The custom setting used to hold the Record Type, Team and a number field to hold the number of &quot;New&quot; backlog records.</description>
    <inlineHelpText>The custom setting used to hold the Record Type, Team and a number field to hold the number of &quot;New&quot; backlog records.</inlineHelpText>
    <label>Number of In New Backlogs</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>