force-app/main/default/objects/Dashboard_Limits__c/fields/Number_Of_Active_Projects__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Active_Projects__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Maximum number of active Project Backlogs items considered for Kanban board.</description>
    <inlineHelpText>Maximum number of active Project Backlogs items considered for Kanban board.</inlineHelpText>
    <label>Number Of Active Projects</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>