force-app/main/default/objects/Dashboard_Limits__c/fields/Number_of_Unplanned_Backlogs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unplanned_Backlogs__c</fullName>
    <defaultValue>20</defaultValue>
    <description>This setting contains the number of Projects for the specific Record Type and Team combination that can have the “Unplanned” check box checked.</description>
    <inlineHelpText>This setting contains the number of Projects for the specific Record Type and Team combination that can have the “Unplanned” check box checked.</inlineHelpText>
    <label>Number of Unplanned Backlogs</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>