force-app/main/default/objects/Dashboard_Limits__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Record Type of the Project Backlog item.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Record Type of the Project Backlog item.</inlineHelpText>
    <label>Record Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>