force-app/main/default/objects/Dashboard_Limits__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Team of the Project Backlog item</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Team of the Project Backlog item</inlineHelpText>
    <label>Team</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>